# srtd

./: .env.example  .gitignore  README.md  confirmation_box.py  docker-compose.yaml  file_explorer.py  flake.nix  gui.py  hello_world.py  main.qml  poc-script.zsh  pyproject.toml  readme.md  requirements.txt  themes.py
srtd/: __main__.py  cli.py  core.py  file_matching.py  filter.py  lexical_file_matching.py  openai_client.py  schema.py  semantic_file_matching.py  semantic_file_uploading.py  test.py  weaviate_client.py
srtd-gui/: file_explorer.py  gui.py
srtd/gui/: __main__.py  file_explorer.py  file_view.py
themes/: forest_green.py  theme.py
