[project]
name = "srtd"
version = "0.1.0"
description = "Blazing fast file sorter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6",
]

# [project.scripts]
# hello = "hello_world:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
