[project]
name = "srtd"
version = "0.1.0"
description = "Blazing fast file sorter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "authlib==1.3.1",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "colorama==0.4.6",
    "cryptography==44.0.0",
    "distro==1.9.0",
    "grpcio==1.70.0",
    "grpcio-health-checking==1.70.0",
    "grpcio-tools==1.70.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.8.2",
    "openai==1.60.1",
    "protobuf==5.29.3",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyside6==6.8.1.1",
    "pyside6-addons==6.8.1.1",
    "pyside6-essentials==6.8.1.1",
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "setuptools==75.8.0",
    "shiboken6==6.8.1.1",
    "sniffio==1.3.1",
    "thefuzz",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "validators==0.34.0",
    "weaviate-client==4.10.4",
]

# [project.scripts]
# hello = "hello_world:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
